add wavy backgrounds

--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,53 @@
-section {
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.wave-container {
+  height: 100%;
+  background: #261eb6;
+  background: linear-gradient(
+    180deg,
+    #261eb6 80%,
+    #a8b4d7 88%,
+    #59a3fa 92%,
+    #475ed9 100%
+  );
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 400px;
-  padding-top: 100px;
-  background: #3c31dd;
 }
 
-.curve {
-  position: absolute;
-  height: 250px;
+.wave-container::before {
+  content: "";
   width: 100%;
-  bottom: 0;
+  height: 91px;
+  position: absolute;
+  bottom: -0.3%;
+  left: 0;
+  background-size: auto;
+  background-repeat: repeat no-repeat;
+  background-position: 50vw bottom;
+  background-image: url("data:image/svg+xml;utf8,<svg viewBox='0 0 1200 81' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M0 1C19.5523 2 32.2291 3 51.5 5C104.5 11 200 26 300 40C400 54 500 67 600 62C700 56 800 32 900 18C987.526 3 1085.36 -1 1150 0C1169.54 -1 1180.49 0 1200 1V81H1150C1100 81 1000 81 900 81C800 81 700 81 600 81C500 81 400 81 300 81C200 81 100 81 50 81H0V1.98128Z' fill='%23ffeef9'/></svg>");
+}
+
+/* @media (max-width: 850px) {
+  .wave-container::before {
+    height: 45.5px;
+  }
+} */
+
+.signup {
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 0 20px;
+  min-width: 100%;
+  margin-bottom: 20px;
+}
+
+.text-center {
   text-align: center;
-  z-index: -2000;
+  font-size: medium;
 }
 
-.curve::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
-  height: 100%;
-  transform: translate(85%, 60%);
-  background-color: hsl(216, 21%, 16%);
-}
-
-.curve::after {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
-  height: 100%;
-  background-color: #3c31dd;
-  transform: translate(-4%, 40%);
-  z-index: -1;
+.container {
+  z-index: 1;
 }
