--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,10 @@ body {
   background: #261eb6;
   background: linear-gradient(
     180deg,
+    #475ed9 100%,
     #261eb6 80%,
     #a8b4d7 88%,
-    #59a3fa 92%,
-    #475ed9 100%
+    #59a3fa 92%
   );
   position: relative;
 }
@@ -36,7 +36,7 @@ body {
 } */
 
 .signup {
-  border-radius: 10px;
+  border-radius: 0px 0px 10px 10px;
   background-color: #fff;
   padding: 0 20px;
   min-width: 100%;
@@ -48,6 +48,52 @@ body {
   font-size: medium;
 }
 
+.mini-header {
+  border-radius: 15px 15px 0px 0px;
+  background-color: #ffff;
+  /* padding: 10px !important; */
+  color: #fff;
+  font-weight: bold;
+}
+
 .container {
   z-index: 1;
+  margin: 0;
+}
+.border-rounded {
+  border-radius: 50%;
+  padding: 10px 15px;
+  color: #59a3fa;
+  background-color: #fff;
+  text-align: center;
+  font-weight: bolder;
+}
+
+.step-1 {
+  background-color: #59a3fa;
+  border-radius: 10px 50px 50px 0px;
+}
+
+.incomplete {
+  color: #a8b4d7;
+}
+
+.step {
+  width: 100%;
+  max-width: 33%;
+  justify-content: flex-start;
+}
+
+.pending {
+  color: #fff;
+  background-color: #a8b4d7;
+}
+
+.text-disabled {
+  color: #a8b4d7;
+  font-weight: bold;
+}
+
+.text-bold {
+  font-weight: bold;
 }
