--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
     #59a3fa 92%
   );
   position: relative;
+  color: #575656;
 }
 
 .wave-container::before {
@@ -27,6 +28,15 @@ body {
   background-repeat: repeat no-repeat;
   background-position: 50vw bottom;
   background-image: url("data:image/svg+xml;utf8,<svg viewBox='0 0 1200 81' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M0 1C19.5523 2 32.2291 3 51.5 5C104.5 11 200 26 300 40C400 54 500 67 600 62C700 56 800 32 900 18C987.526 3 1085.36 -1 1150 0C1169.54 -1 1180.49 0 1200 1V81H1150C1100 81 1000 81 900 81C800 81 700 81 600 81C500 81 400 81 300 81C200 81 100 81 50 81H0V1.98128Z' fill='%23ffeef9'/></svg>");
+}
+
+.self-center {
+  align-self: center;
+}
+.mue-cat img {
+  border-radius: 45%;
+  width: 100px;
+  filter: blur(10px);
 }
 
 /* @media (max-width: 850px) {
@@ -50,7 +60,7 @@ body {
 
 .mini-header {
   border-radius: 15px 15px 0px 0px;
-  background-color: #ffff;
+  background-color: #dbd8d8;
   /* padding: 10px !important; */
   color: #fff;
   font-weight: bold;
@@ -60,33 +70,34 @@ body {
   z-index: 1;
   margin: 0;
 }
+
 .border-rounded {
   border-radius: 50%;
   padding: 10px 15px;
-  color: #59a3fa;
-  background-color: #fff;
   text-align: center;
   font-weight: bolder;
-}
-
-.step-1 {
-  background-color: #59a3fa;
-  border-radius: 10px 50px 50px 0px;
-}
-
-.incomplete {
-  color: #a8b4d7;
 }
 
 .step {
   width: 100%;
   max-width: 33%;
   justify-content: flex-start;
+  z-index: 2;
 }
 
-.pending {
+.incomplete {
+  color: #a8b4d7;
+}
+
+.incomplete .pending {
   color: #fff;
   background-color: #a8b4d7;
+}
+
+.active .done,
+.completed .done {
+  color: #59a3fa;
+  background-color: #fff;
 }
 
 .text-disabled {
@@ -96,4 +107,23 @@ body {
 
 .text-bold {
   font-weight: bold;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  z-index: 1;
+  background: #59a3fa;
+  background: linear-gradient(90deg, #59a3fa 33%, #475ed9 66%, #2146b0 100%);
+  border-radius: 10px 50px 50px 0px;
+  transition: 1s ease;
+}
+
+.onboarding-completed {
+  border-radius: 15px 15px 0px 0px;
 }
